Добавил оставшиеся аннотации для свагера
